// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> should renders the <Card/> and toggles the card features 1`] = `
<div
  class="card__Group-s87lnr-2 iYJwJU"
>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card/> should renders the <Card/> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 iYJwJU"
>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card/> should renders the <Card/> with populated data 2`] = `
<div
  class="card__Group-s87lnr-2 iYJwJU"
>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card/> should renders the <Card/> with populated data 3`] = `
<div
  class="card__Group-s87lnr-2 iYJwJU"
>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 hTSula"
    >
      <div
        class="card__Item-s87lnr-13 cmxmpH"
      >
        <img
          class="card__Image-s87lnr-14 inppkG"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 jjewMe"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
